--- a/src/docs/userguide/javaPlugin.tex
+++ b/src/docs/userguide/javaPlugin.tex
@@ -1,9 +1,9 @@
 %!TEX root = master.tex
 \chapter{The Java Plugin} % (fold)
 \label{cha:the_java_plugin}
-Table \ref{javalayout} shows the default project layout assumed by the Java Plugin. This is configurable via the convention object. Table \ref{javatasks} shows the tasks added by the Java Plugin. These tasks constitute a lifecycle for Java builds. Table \ref{javaconvention} shows the most important properties of the convention object of the Java plugin.\footnote{The \emph{buildDir} property is a property of the project object. It defaults to \texttt{build}.}
+Table \ref{javalayout} shows the default project layout assumed by the Java Plugin. This is configurable via the convention object. Table \ref{javatasks} shows the tasks added by the Java Plugin. These tasks constitute a lifecycle for Java builds. Table \ref{javaconventionDir} and Table \ref{javaconventionNonDir} shows the most important properties of the convention object of the Java plugin.\footnote{The \emph{buildDir} property is a property of the project object. It defaults to \texttt{build}.}
 
-\begin{table}[h]
+\begin{table}
 	\begin{center}
 	\begin{tabular}{|l|l|} \hline
 	\textbf{Folder} & \textbf{Meaning} \\ \hline
@@ -18,7 +18,7 @@ Table \ref{javalayout} shows the default project layout assumed by the Java Plug
 	\label{javalayout}
 \end{table}
 
-\begin{table}[h]
+\begin{table}
 	\begin{center}
 		\begin{tabular}{|l|l|l|} \hline
 			\textbf{Taskname} & \textbf{dependsOn} & \textbf{Type} \\ \hline
@@ -40,40 +40,57 @@ Table \ref{javalayout} shows the default project layout assumed by the Java Plug
 	\label{javatasks}
 \end{table}
 
-\begin{table}[h]
+\begin{table}
+	\begin{center}
+		\begin{tabular}{|l|l|l|l|} \hline
+			\textbf{Dir Name} & \textbf{Dir File} & \textbf{Default Value Name} & \textbf{Default Value File}\\ \hline
+			srcRootName & srcRoot & \texttt{src} & \emph{projectDir}\texttt{/src}\\ \hline
+			srcDirNames & srcDirs & \texttt{main/java} & [\emph{srcRoot}\texttt{/main/java}] \\ \hline
+			resourceDirNames & resourceDirs & \texttt{main/resources} & [\emph{srcRoot}\texttt{/main/resources}]\\ \hline
+			testSrcDirNames & testSrcDirs & \texttt{test/java} & [\emph{srcRoot}\texttt{/test/java}] \\ \hline
+			testResourceDirNames & testResourceDirs & \texttt{main/resources} & [\emph{srcRoot}\texttt{/main/resources}] \\ \hline
+			srcDocsDirName & srcDocsDir & \texttt{docs} & \emph{srcRoot}\texttt{/docs} \\ \hline
+			classesDirName & classesDir & \texttt{classes} & \emph{buildDir}\texttt{/classes} \\ \hline
+			testClassesDirName & testClassesDir & \texttt{test-classes} & \emph{buildDir}\texttt{/test-classes} \\ \hline
+			testResultsDir & testResultsDirName & \texttt{test-results} & \emph{buildDir}\texttt{/test-results} \\ \hline
+			distsDirName & distsDir & \texttt{dists} & \emph{buildDir}\texttt{/dists} \\ \hline
+			docsDirName & docsDir & \texttt{docs} & \emph{buildDir}\texttt{/docs} \\ \hline
+			javadocDirName & javadocDir & \texttt{javadoc} & \emph{buildDir}\texttt{/javadoc} \\ \hline
+		\end{tabular}
+	\end{center}
+	\caption{Java Convention Object - Dir Properties}
+	\label{javaconventionDir}
+\end{table}
+\begin{table}
 	\begin{center}
 		\begin{tabular}{|l|l|l|} \hline
 			\textbf{Property} & \textbf{Type} & \textbf{Default Value} \\ \hline
-			srcRoot & File & \texttt{src} \\ \hline
-			srcDirs & List & [\emph{srcRoot}\texttt{/main/java}] \\ \hline
-			resourceDirs & List & [\emph{srcRoot}\texttt{/main/resources}]\\ \hline
-			testSrcDirs & List & [\emph{srcRoot}\texttt{/main/test}] \\ \hline
-			testResourceDirs & List & [\emph{srcRoot}\texttt{/main/resources}] \\ \hline
-			srcDocsDir & File & \emph{srcRoot}\texttt{/docs} \\ \hline
-			classesDir & File & \emph{buildDir}\texttt{/classes} \\ \hline
-			testClassesDir & File & \emph{buildDir}\texttt{/test-classes} \\ \hline
-			testResultsDir & File & \emph{buildDir}\texttt{/test-results} \\ \hline
-			distsDir & File & \emph{buildDir}\texttt{/dists} \\ \hline
-			docsDir & File & \emph{buildDir}\texttt{/docs} \\ \hline
-			javadocDir & File & \emph{buildDir}\texttt{/javadoc} \\ \hline
 			sourceCompatibility & String & \texttt{null} \\ \hline
 			targetCompatibility & String & \texttt{null} \\ \hline
 			manifest & GradleManifest & empty \\ \hline
 			metaInf & FileSet & empty \\ \hline
 		\end{tabular}
 	\end{center}
-	\caption{Java Convention Object}
-	\label{javaconvention}
+	\caption{Java Convention Object - Non Dir Properties}
+	\label{javaconventionNonDir}
 \end{table}
 
 \section{Init} % (fold)
 \label{sec:initialization}
-The \texttt{init} task has no default action attached to it. It is meant to be a hook. You can add actions to it or associates your custom tasks with. The Java Plugin executes this task before any other of its tasks get executed (except \texttt{clean} which does not depends on \texttt{init}).
+The \texttt{init} task has no default action attached to it. It is meant to be a hook. You can add actions to it or associates your custom tasks with it. The Java Plugin executes this task before any other of its tasks get executed (except \texttt{clean} and \texttt{javadoc} which does not depends on \texttt{init}).
 % section initialization (end)
 
 \section{Javadoc} % (fold)
 \label{sec:javadoc}
-The \texttt{javadoc} task is not associated with any other tasks out-of-the-box. It has no prerequisites on the actions of other tasks, as it operates on the source. If you are in need of very fine-grained configuration you might have to use the corresponding Ant task explicitly. 
+The \texttt{javadoc} task has no default association with any other task. It has no prerequisites on the actions of other tasks, as it operates on the source. It does not provide a fine-grained configuration API yet. If you need this, you have to use for example Ant's javadoc task directly.
+\begin{center}
+	\begin{tabular}{|l|l|} \hline
+		\multicolumn{2}{|c|}{Convention to Property Mapping} \\ \hline
+	    \textbf{Task Property} & \textbf{Convention Property} \\ \hline
+		srcDirs & srcDirs \\ \hline
+		destinationDir & [javadocDir] \\ \hline
+	\end{tabular} 
+\end{center} 
 % section javadoc (end)
 
 \section{Clean} % (fold)
@@ -94,7 +111,7 @@ The \emph{Resources} task has two instances, \texttt{resources} and \texttt{test
 		testResources & destinationDir & testClassesDir \\ \hline
 	\end{tabular} 
 \end{center}
-\noindent The \texttt{resources} task offers includes and excludes directives as well as filters. Have a look at \href{}{org.gradle.api.tasks.Resources} to learn about the details.
+\noindent The \texttt{resources} task offers includes and excludes directives as well as filters. Have a look at \href{\API tasks/Resources.html}{org.gradle.api.tasks.Resources} to learn about the details.
 % section resources (end)
 
 \section{Compile} % (fold)
@@ -132,7 +149,7 @@ The \texttt{test} task executes the unit tests which have been compiled by the \
 		unmanagedClasspath & [classesDir] \\ \hline
 	\end{tabular} 
 \end{center}
-\noindent Have a look at \href{\API org/gradle/api/tasks/testing/Test.html}{org.gradle.api.tasks.testing.Test} to learn more. Right now the test results are always in XML-format. The task has a \texttt{stopAtFailuresOrErrors} property to control the behavior when tests are failing. The task always executes all the tests and afterwards stops he build if this property is true and there are failing tests or tests that have thrown an uncaught exception. The test task delegates to Ants junit task. TestNG is not supported yet. You can expect TestNG support with our next release. 
+\noindent Have a look at \href{\API tasks/testing/Test.html}{org.gradle.api.tasks.testing.Test} to learn more. Right now the test results are always in XML-format. The task has a \texttt{stopAtFailuresOrErrors} property to control the behavior when tests are failing. The task \emph{always} executes all the tests and afterwards stops the build if this property is true and there are failing tests or tests that have thrown an uncaught exception. The test task delegates to Ants junit task. TestNG is not supported yet. You can expect TestNG support with our next release. 
 % section test (end)
 
 \section{Bundles} % (fold)
@@ -150,7 +167,7 @@ The \emph{Bundle} task has two instances, \texttt{libs} and \texttt{dists}. The 
 \end{center}
 \subsection{The libs Task} % (fold)
 \label{sub:the_libs_task}
-The \texttt{libs} task contains all the archive tasks which constitute the libraries needed to use your project as a library. For example in a multi-project build the archives which are produced by the \texttt{libs} task are available in the classpath of a dependent project. If your upload your project into a repository, those archives are part of the dependency descriptor. If you come from Maven you can have only one library jar per project. With Ivy you can have as many as you want. 
+The \texttt{libs} task contains all the archive tasks which constitute the libraries needed to use your project as a library. For example in a multi-project build the archives which are produced by the \texttt{libs} task are available in the classpath of a dependent project. If you upload your project into a repository, those archives are part of the dependency descriptor. If you come from Maven you can have only one library jar per project. With Ivy you can have as many as you want. 
 The Java plugin adds by default one jar archive to the \texttt{libs} task. This jar contains the content of the \texttt{classesDir}. This is the behavior your are used from Maven. If you are happy with that you usually don't have to touch this task. Except if you want to change the names of the produced archives. 
 
 The \texttt{libs} task depends on the \texttt{test} task and its archive tasks. The archive tasks assigned to the \texttt{libs} task depend by default on the \texttt{test} task as well. You can change this via the \texttt{childrenDependsOn} property of the \texttt{libs} task. 
@@ -186,7 +203,7 @@ The Bundle task has a couple of convenience methods for adding new archive tasks
 	\item a name: \texttt{tasksBaseName} plus the \_TYPE suffix (e.g. gradle\_zip).
 	\item a resulting archive name: \texttt{tasksBaseName} plus version plus the \_TYPE suffix (e.g. gradle-1.0.zip).
 \end{itemize}
-You can pass two (optional) arguments to those methods. One is a name which replaces the \texttt{tasksBaseName} value for this archive task. The other is a closure for configuring the archive task (e.g. defining the content).
+You can pass two (optional) arguments to those methods. One is a name which replaces the \texttt{tasksBaseName} value for this archive task. The other is a closure for configuring the archive task (e.g. defining the files of the archive).
 The default value for \texttt{tasksBaseName} is the project name. So usually you don't need to set it explicitly. 
 % subsection examples (end)  
 
@@ -196,20 +213,20 @@ An archive task is a task which produces an archive at execution time. The follo
 \begin{center}
 	\begin{tabular}{|l|l|} \hline
 		Type & Accepted file container \\ \hline
-		org.gradle.api.tasks.bundling.Zip & fileSet, fileCollection, zipFileSet \\ \hline
-		org.gradle.api.tasks.bundling.Tar & fileSet, fileCollection, zipFileSet \\ \hline
-		org.gradle.api.tasks.bundling.Jar & fileSet, fileCollection \\ \hline
-		org.gradle.api.tasks.bundling.War & fileSet, fileCollection \\ \hline		
+		\href{\API tasks/bundling/Zip.html}{org.gradle.api.tasks.bundling.Zip} & fileSet, fileCollection, zipFileSet \\ \hline
+		\href{\API tasks/bundling/Tar.html}{org.gradle.api.tasks.bundling.Tar} & fileSet, fileCollection, zipFileSet \\ \hline
+		\href{\API tasks/bundling/Jar.html}{org.gradle.api.tasks.bundling.Jar} & fileSet, fileCollection \\ \hline
+		\href{\API tasks/bundling/War.html}{org.gradle.api.tasks.bundling.War} & fileSet, fileCollection \\ \hline		
 	\end{tabular}
 \end{center}
-The following file container are available:
+The following file containers are available:
 \begin{center}
-	\begin{tabular}{|l|l|} \hline
+	\begin{tabularx}{\textwidth}{|l|X|} \hline
 		Type & Meaning \\ \hline
-		org.gradle.api.tasks.util.FileSet & A set of files defined by a common baseDir and include/exclude patterns. \\ \hline
-		org.gradle.api.tasks.util.ZipFileSet & Extends file with additional properties known from Ants zipFileSet task.\\ \hline
-		org.gradle.api.tasks.util.FileCollection & An arbitrary collection of files to the archive. In contrast to a fileset they don't need to have a commo basedir.\\ \hline		
-	\end{tabular}
+		\href{\API tasks/util/FileSet.html}{org.gradle.api.tasks.util.FileSet} & A set of files defined by a common baseDir and include/exclude patterns. \\ \hline
+		\href{\API tasks/util/ZipFileSet.html}{org.gradle.api.tasks.util.ZipFileSet} & Extends FileSet with additional properties known from Ants zipfileset task.\\ \hline
+		\href{\API tasks/util/FileCollection.html}{org.gradle.api.tasks.util.FileCollection} & An arbitrary collection of files to the archive. In contrast to a FileSet they don't need to have a common basedir.\\ \hline		
+	\end{tabularx}
 \end{center}
 % section archive_tasks (end)
 
