enhanced user guide
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@328 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/docs/userguide/depMngmt.tex
+++ b/src/docs/userguide/depMngmt.tex
@@ -1,5 +1,6 @@
 %!TEX root = master.tex
 \chapter{Dependency Management}
+\label{cha:dependency_management}
 Java Plugin and FlatFileFolder and IBiblio to be done !!!!!
 \section{Introduction} % (fold)
 \label{sec:Introduction}
