--- a/src/docs/userguide/overview.tex
+++ b/src/docs/userguide/overview.tex
@@ -15,6 +15,11 @@ Here is a list of Gradles features which we think are special. Special means the
     \item[The Gradle Wrapper]  
 \end{description}
 
+\section{Why Groovy} % (fold)
+\label{sec:why_groovy}
+
+% section why_groovy (end)
+
 % section special_feature_of_gradle (end)
 Gradle is driven by the following principles:
 
