--- a/src/docs/userguide/groovyPlugin.tex
+++ b/src/docs/userguide/groovyPlugin.tex
@@ -15,15 +15,15 @@ The Groovy Plugin extends the JavaPlugin. It can deal with pure Java projects\fo
 \end{table}
 \begin{table}[h]
 	\begin{center}
-		\begin{tabular}{|l|l|l|} \hline
-			\textbf{Property} & \textbf{Type} & \textbf{Default Value} \\ \hline
-			groovySrcDirNames & List & [\texttt{/main/groovy}] \\ \hline
-			groovyTestSrcDirNames & List & [\texttt{/test/groovy}] \\ \hline
+		\begin{tabular}{|l|l|l|l|} \hline
+			\textbf{Dir Name} & \textbf{Dir File} & \textbf{Default Value Name} & \textbf{Default Value File}\\ \hline
+			groovySrcDirNames & groovySrcDirs & \texttt{main/groovy} & [\emph{srcRoot}\texttt{/main/groovy}] \\ \hline
+			groovyTestSrcDirNames & groovyTestSrcDirs & \texttt{test/groovy} & [\emph{srcRoot}\texttt{/test/groovy}] \\ \hline
 		\end{tabular}
 	\end{center}
-	\caption{Groovy Convention Object (extends JavaConvention). For every \emph{name} property, there is a read-only property without \emph{name} which denotes the actual directory (e.g. \texttt{groovySrcDirs}).}
+	\caption{Groovy Convention Object (extends JavaConvention).}
 	\label{groovyconvention}
 \end{table}
 
-All the Groovy source directories can contain Groovy \emph{and} Java code. The Java source directories may only contain Java source code (and can of course be empty)\footnote{We are using the same conventions as introduced by Russel Winders Gant tool (\url{http://gant.codehaus.org}).}
+\noindent All the Groovy source directories can contain Groovy \emph{and} Java code. The Java source directories may only contain Java source code (and can of course be empty)\footnote{We are using the same conventions as introduced by Russel Winders Gant tool (\url{http://gant.codehaus.org}).}
 % chapter the_groovy_plugin (end)
