--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -7,6 +7,7 @@
 \oddsidemargin}{-0.7cm}
 
 \def \API {http://www.gradle.org/api/latest/org/gradle/api/} 
+\def \PKG {org.gradle.api.} 
 
 \includeonly{introduction,buildScripts,javaTutorial,thisAndThat,overview,projectTaskApi,tasks,plugins,javaPlugin,groovyPlugin,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport,mavenPoms} 
 \usepackage{upquote} 
