--- a/src/docs/userguide/overview.tex
+++ b/src/docs/userguide/overview.tex
@@ -13,6 +13,7 @@ Here is a list of Gradles features which we think are special. Special means the
 	\item[Configure By DAG] 
 	\item[Distinct Dependency Hierarchies]
     \item[The Gradle Wrapper]  
+    \item[Partial Builds]  
 \end{description}
 
 \section{Why Groovy} % (fold)
